[Feat] Add bson-model3